[tool.poetry]
name = "finalproject-konovalova-m25-555"
version = "0.1.0"
description = ""
authors = ["Elizaveta Konovalova <Eliza050203@yandex.ru>"]
readme = "README.md"

packages = [
    {include = "valutatrade_hub"}
]

[tool.poetry.scripts]
project = "main:main"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.6"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "pycache"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
